--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -19,5 +19,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run deploy
+    - name: Install dependencies
+      run: npm install
+    - name: Build
+      run: npm run build
+    - name: Deploy
+      run: npm run deploy
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
