--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install
     - name: Build
       run: npm run build
+    - name: Git config
+      run: git config user.name "robertobatts"
     - name: Deploy
       run: npm run deploy
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
