--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -27,3 +27,5 @@ jobs:
       run: git config user.name "robertobatts"
     - name: Deploy
       run: npm run deploy
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
