--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Deploy
       run: npm run deploy
       env:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
