--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "github-pages-deploy-action": "^3.5.1",
     "primeflex": "^1.0.0",
     "primereact": "^4.1.2",
     "react": "^16.13.1",
